[package]
name = "snapmixer"
version = "2.5.0"
description = "Text-mode volume mixer for Snapcast"
authors = ["Bart Nagel <bart@tremby.net>"]
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
itertools = "0.14.0"
owo-colors = "4.2.3"
ratatui = "0.30.0"
snapcast-control = "0.4.0"
supports-unicode = "3.0.0"
tabular = { version = "0.2.0", features = ["ansi-cell"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
